syntax = "proto3";

package pb;

message MetricsPayloadGoFast {
    message Timeserie {
        message Point {
            int64 ts = 1;
            double value = 2;
        }
        string metric = 1;
        string type = 2;
        string host = 3;
        repeated Point points = 4;
        repeated string tags = 5;
        int32 interval = 6;

    }
    repeated Timeserie timeseries = 1;
}
